# safari

./: .gitignore  README.md  README.org  pyproject.toml  setup.py
examples/: export.py
resworb/: __init__.py  base.py  exporter.py
resworb/browsers/: __init__.py  chrome.py  firefox.py  safari.py
resworb/commands/: safari_export.py  safari_main.py
safari/: __init__.py  bookmark.py  cloudtab.py  exporter.py  formater.py  history.py  resource.py  safari_export.py
safari/commands/: safari_export.py  safari_main.py
