[tool.poetry]
name = "safari"
version = "1.2.0"
description = "Python utilities for Safari."
authors = ["Yevgnen Koh <wherejoystarts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^20.8b1"
isort = "^5.4.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
